--- a/Code/Games/LobbyGame/LobbyPanel/LobbyPanel.razor
+++ b/Code/Games/LobbyGame/LobbyPanel/LobbyPanel.razor
@@ -44,28 +44,28 @@
             }
             else
             {
-                <label class="ttl">multiplayer broke for now.</label>
-                @* <div class="button-list"> *@
-                @*     @foreach (var lobby in Servers) *@
-                @*     { *@
-                @*        // @if (lobby.Map != "Basement" || lobby.Members > 3 ) { continue; } *@
-                @*         <div class="button" onclick=@( () => OpenLobby( lobby ) )> *@
-                @*             <div class="title"> *@
-                @*                 @lobby.Name *@
-                @*             </div> *@
+               
+                //<div class="button-list">
+                //    @foreach (var lobby in Servers)
+                //    {
+                       // @if (lobby.Map != "Basement" || lobby.Members > 3 ) { continue; }
+                //        <div class="button" onclick=@( () => OpenLobby( lobby ) )>
+                 //           <div class="title">
+                 //               @lobby.Name
+                  //          </div>
 
-                @*             <div class="meta"> *@
-                @*                 <div class="map"> *@
-                @*                     @lobby.Map *@
-                @*                 </div> *@
+                   //         <div class="meta">
+                   //             <div class="map">
+                   //                 @lobby.Map
+                   //             </div>
 
-                @*                 <div class="count"> *@
-                @*                     @lobby.Members / @lobby.MaxMembers *@
-                @*                 </div> *@
-                @*             </div> *@
-                @*         </div> *@
-                @*     } *@
-                @* </div> *@
+                  //              <div class="count">
+                   //                 @lobby.Members / @lobby.MaxMembers
+                  //              </div>
+                  //          </div>
+                  //      </div>
+                 //   }
+                //</div>
             }
          </div>
        
